Fix search bar in Orders page not being tapable on mobile

--- a/client/stylesheets/shared/_embed.scss
+++ b/client/stylesheets/shared/_embed.scss
@@ -12,6 +12,12 @@
 
 	.wrap {
 		padding: 20px;
+
+		@include breakpoint( '<782px' ) {
+			p.search-box {
+				width: calc(100% - 40px);
+			}
+		}
 	}
 
 	#woocommerce-embedded-root.is-embed-loading + #wpbody .wrap {
